--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -21,7 +21,7 @@ header.language.fr = French
 header.language.en = English
 
 /*---Footer---*/
-footer.copyright = Sym022©2023 Website maked by DEBETANCOURT Daphné and DEVOGELAERE Thomas.
+footer.copyright = Sym022©2023 Website created by DEBETANCOURT Daphne and DEVOGELAERE Thomas.
 
 /*---Menu---*/
 menu.data.DM = Data Manager menu
@@ -31,12 +31,12 @@ menu.data.site.consult = Liste of sites
 menu.data.users = Users
 menu.data.users.add = Add a user
 menu.data.users.consult = List of utilisateurs
-menu.data.usersSite.add = Create a list of sites for a user
+menu.data.usersSite.add = Allocate a list of sites for a user
 menu.data.usersSite.consult = List of users and related sites
 menu.data.role = Roles and permissions
 menu.data.role.add = Add a role
 menu.data.role.consult = List of roles
-menu.data.rolePermission.add = Create a list of permissions for a role
+menu.data.rolePermission.add = Allocate a list of permissions for a role
 menu.data.rolePermission.modify = List of roles and related permissions
 menu.subject = Subjects
 menu.data.subject = Subjects menu
@@ -47,11 +47,11 @@ menu.data.event.add = Add an event
 menu.data.event.consult = List of events
 
 /*---Filter---*/
-listPage.messageErrorResearch = Research need to be less than 60 character and without special character
+listPage.messageErrorResearch = Research needs to be less than 60 characters and without special character
 listPage.filter = Enter your search term
 
 /*---Err-Message---*/
-ConnectionPage.errorMessageLogin = The username cannot be empty and have a minimum of 2 digits
+ConnectionPage.errorMessageLogin = The username cannot be empty and have a minimum of 2 characters
 
 /*---Popup---*/
 site = The site
@@ -60,34 +60,35 @@ role = The role
 listOfPermissionsOf = The list of permissions
 listOfSites = The list of sites
 subject =  The subject
-dov = The Date of visit
-ic = The consent
-dm = The information of Demography
-vs = The information of Vital Signs
+dov = The form Date of visit
+ic= The form Informed consent
+dm = The form Demography
+vs = The form Vital Signs
+te = The form Tumoral Evaluation
 add = has been created
 update = has been updated
 for = for the
 
 /*---Site---*/
-sitePage.addSiteTitle = Create a hospital site
-sitePage.addSite = Create a hospital site
-sitePage.siteNum = Hospital site number
-sitePage.siteNum.placeHolder = The hospital site number is between 1 and 999999
-sitePage.siteNum.errorMessage = The hospital site number is between 1 and 999999
-messageErrorSiteNum = The hospital site number entered already exists in the database
-sitePage.siteName = Name of hospital site
-sitePage.siteName.placeHolder = The name of hospital site cannot be empty and have a minimum of 2 digits and not contain a number
-sitePage.siteName.errorMessage = The name of hospital site cannot be empty and have a minimum of 2 digits and not contain a number
-sitePage.piName = Name of investigator
-sitePage.piName.placeHolder = The name of investigator cannot be empty and have a minimum of 2 digits and not contain a number
-sitePage.piName.errorMessage = The name of investigator cannot be empty and have a minimum of 2 digits and not contain a number
-sitePage.addSite.create = Create the hospital site
-sitePage.update =  Update the hospital site
+sitePage.addSiteTitle = Create a site
+sitePage.addSite = Create a site
+sitePage.siteNum = Site number
+sitePage.siteNum.placeHolder = The site number is between 1 and 999999
+sitePage.siteNum.errorMessage = The site number is between 1 and 999999
+messageErrorSiteNum = The site number entered already exists in the database
+sitePage.siteName = Site name
+sitePage.siteName.placeHolder = The site name is mandatory and must be at least 2 characters long and contain no digits
+sitePage.siteName.errorMessage = The site name is mandatory and must be at least 2 characters long and contain no digits
+sitePage.piName = Investigator name
+sitePage.piName.placeHolder = The investigator name is mandatory and must be at least 2 characters long and contain no digits
+sitePage.piName.errorMessage = The investigator name is mandatory and must be at least 2 characters long and contain no digits
+sitePage.addSite.create = Create the site
+sitePage.update =  Update the site
 
 /*---ListOfSites---*/
-sitePage.ListOfSites = List of hospital sites
+sitePage.ListOfSites = List of sites
 action = Action
-sitePage.ListOfSites.modify = Update the hospital site
+sitePage.ListOfSites.modify = Update the site
 sitePage.status = Status 
 sitePage.Active = Active
 sitePage.Inactive = Inactive
@@ -96,18 +97,18 @@ sitePage.Inactive = Inactive
 userPage.addUserTitle = Create a user
 userPage.addUser = Create a user
 userPage.lastName = Last name
-userPage.lastName.placeHolder = The name of user cannot be empty and have a minimum of 2 digits and not contain a number
-userPage.lastName.errorMessage = The name of user cannot be empty and have a minimum of 2 digits and not contain a number
+userPage.lastName.placeHolder = The last name is mandatory and must be at least 2 characters long and contain no digits
+userPage.lastName.errorMessage = The last name is mandatory and must be at least 2 characters long and contain no digits
 userPage.firstName = First name
-userPage.firstName.placeHolder = The first name of user cannot be empty and have a minimum of 2 digits and not contain a number
-userPage.firstName.errorMessage = The first name of user cannot be empty and have a minimum of 2 digits and not contain a number
+userPage.firstName.placeHolder = The first name is mandatory and must be at least 2 characters long and contain no digits
+userPage.firstName.errorMessage = The first name is mandatory and must be at least 2 characters long and contain no digits
 userPage.username = Username
-userPage.username.placeHolder = The username of user cannot be empty and have a minimum of 2 digits
-userPage.username.errorMessage = The username of user cannot be empty and have a minimum of 2 digits
+userPage.username.placeHolder = The username is mandatory and must be at least 2 characters long
+userPage.username.errorMessage = The username is mandatory and must be at least 2 characters long
 messageErrorUserName = The username entered already exists in the database
 userPage.mail = Email address
-userPage.mail.placeHolder = The email address must be like XXX@XXX.XXX
-userPage.mail.errorMessage = The email address must be like XXX@XXX.XXX
+userPage.mail.placeHolder = The email address must match the following format XXX@XXX.XXX
+userPage.mail.errorMessage = The email address must match the following format XXX@XXX.XXX
 userPage.Password = Password
 userPage.password.placeholder = The password must contain a minimum of 8 characters with a UpperCase Letter, a special character and a number
 userPage.Password.errorMessage = The password must contain a minimum of 8 characters with a UpperCase Letter, a special character and a number
@@ -120,10 +121,10 @@ userPage.ListOfUsers = List of users
 /*---Role---*/
 rolePage.addRoleTitle = Create a role
 rolePage.addRole = Create a role
-rolePage.roleLabel = Name of the role
-rolePage.roleLabel.placeholder = the name of the role must have a minimum of 2 characters
-rolePage.roleLabel.errorMessage = the name of the role must have a minimum of 2 characters
-messageErrorRoleName = The name of the entered already exists in the database
+rolePage.roleLabel = Role name
+rolePage.roleLabel.placeholder = the role name is mandatory and must be at least 2 characters long
+rolePage.roleLabel.errorMessage = the role name is mandatory and must be at least 2 characters long
+messageErrorRoleName = The role name entered already exists in the database
 application.create.role = Create a role
 rolePage.updateRoleTitle = Update a role
 application.update.role = Update a role
@@ -134,17 +135,17 @@ rolePage.ListOfRoles = List of roles
 add.rolePermission = Create a list of permissions for a role
 select.role = Select a role
 select.permission = Select the permission(s)
-update.rolePermission = Update the list of permissions for a role
+update.rolePermission = Update the list of permissions allocated for a role
 
 /*---User Site---*/
-add.userSite = Create a list of sites for a user
+add.userSite = Allocate a list of sites for a user
 select.user = Select a user 
 select.userName = Select a username 
 select.lastName = Select a lastname 
 select.firstName = Select a firstname 
-select.site = Select a hospital site 
-select.siteNum = Select a number of hospital site 
-select.siteName = Select a name of hospital site 
+select.site = Select a site 
+select.siteNum = Select a site number
+select.siteName = Select a site name 
 update.userSitePage = Update the list of sites for a user 
 
 /*---Subject---*/
@@ -155,101 +156,102 @@ subjectPage.subjectNum.errorMessage = The number of the subject must be between 
 messageErrorSubjectNum = The number of the subject already exists in the database 
 sitePage.ListOfSubjects.modify = Update the subject
 sitePage.ListOfSubjects = List of subjects
-sitePage.ListOfSubjects.Consult = Consult the data of the subject
+sitePage.ListOfSubjects.Consult = Consult subject data
 
 /*---Event---*/
 subjectPage.addEvent = Create an event
 visitPage.visit = Visit 
-visitPage.visitLabel = Title of visit
+visitPage.visitLabel = Visit name
 formPage.form = Form 
-formPage.formLabel = Title of form
+formPage.formLabel = Form name
 
 /*---DOV---*/
-dovPage.addDovTitle = Create a Date of visit
-dovPage.status = Realized 
+dovPage.addDovTitle = Create a form Date of visit
+dovPage.status = Was the screening visit performed?
 done = Done
-notDone = Not done
-dovPage.visitNd = Reason 
-dovPage.visitNd.placeholder = Must contain an explanation that the visit has not been realized
-messageErrorVisitNd = This field can only be completed if the visit has not been realized
-messageErrorVisitNdFalse = This field must be completed if the visit has not been realized
-messageErrorVisitDateMissing = The date must be entered if the visit has been realized
+notDone = Not Done
+dovPage.visitNd = Please specify why the visit is not done
+dovPage.visitNd.placeholder = Please specify why the visit is not done
+messageErrorVisitNd = This field can only be completed if the visit is not
+messageErrorVisitNdFalse = This field must be completed if the visit is done
+messageErrorVisitDateMissing = The date must be entered if the visit is performed
 dovPage.visitDate = Date of visit 
-messageErrorVisitDate = The visit date cannot be in the future
-application.create.dov = Create a Date of visit
+messageErrorVisitDate = The date of visit cannot be in the future
+application.create.dov = Create a form Date of visit
 
 /*---IC---*/
-icPage.addIcTitle = Create a consent
-icPage.visitDate = Date of consent 
+icPage.addIcTitle = Create a form Informed consent
+icPage.visitDate = Date of Consent 
 messageErrorIcDate = The date of consent cannot be in the future
 icPage.protocoleVersion = Protocol version 
 icPage.protocoleVersion.placeholder = Must contain the protocol version
-icPage.protocoleVersion.errorMessage = This field cannot be empty
+icPage.protocoleVersion.errorMessage = This field is mandatory
 icPage.status = Subject eligibility 
 eligible = Eligible
 notEligible = Not eligible
-messageErrorIeNotMeet = It is not possible to be eligible with an exclusion criterion
-messageErrorIeNotMeetNa = It is not possible to be ineligible using this criterion
-icPage.ie_not_met = Criterion 
+messageErrorIeNotMeet = The subject is reported as eligible but a criteria has been selected
+messageErrorIeNotMeetNa = The subject is reported as a Screen failure but Criteria not met is missing
+icPage.ie_not_met = Criteria not met
 
 /*---DM---*/
-dmPage.addDmTitle = Create demographic information
+dmPage.addDmTitle = Create a form Demography
 dmPage.year = Year of birth 
 dmPage.year.placeholder = Must be between 1920 and 2005
 dmPage.year.errorMessage = The year of birth must be between 1920 et 2005
 dmPage.sex = Sex 
 dmPage.ethnicity = Ethnicity 
-dmPage.culture = Culture 
+dmPage.culture = Cultural background 
 
 /*---VS---*/
-vsPage.addVsTitle =
-vsPage.status =
-vsPage.vsNd =
-vsPage.vsNd.placeholder =
-vsPage.heightNd =
-vsPage.height =
+vsPage.addVsTitle = Create a form Vital signs
+vsPage.status = Were vital signs collected?
+vsPage.vsNd = Please specify the reason why the vital signs were not collected
+vsPage.vsNd.placeholder = Please specify the reason why vital signs were not collected
+vsPage.vsDate = Date of assessment
+vsPage.heightNd = Height assessment
+vsPage.height = Height
 vsPage.height.placeholder =
 vsPage.height.errorMessage =
-vsPage.weightNd =
-vsPage.height.unit =
-vsPage.weight =
+vsPage.height.unit = Height unit
+vsPage.weightNd = Weight assessment
+vsPage.weight = Weight
 vsPage.weight.placeholder =
 vsPage.weight.errorMessage =
-vsPage.weight.unit =
-vsPage.bpNd =
-vsPage.input_sbp =
+vsPage.weight.unit = Weight unit
+vsPage.bpNd = Blood pressure assessment 
+vsPage.input_sbp = Systolic blood pressure
 vsPage.input_sbp.placeholder =
 vsPage.input_sbp.errorMessage =
-vsPage.input_dbp =
+vsPage.input_dbp = Diastolic blood pressure
 vsPage.input_dbp.placeholder =
 vsPage.input_dbp.errorMessage =
-vsPage.hrNd =
-vsPage.input_hr =
+vsPage.hrNd = Heart rate assessment
+vsPage.input_hr = Heart rate
 vsPage.input_hr.placeholder =
 vsPage.input_hr.errorMessage =
-vsPage.rrNd =
-vsPage.input_rr =
+vsPage.rrNd = Respiratory rate assessment
+vsPage.input_rr = Respiratory rate
 vsPage.input_rr.placeholder =
 vsPage.input_rr.errorMessage =
-vsPage.tempNd =
-vsPage.input_temp =
+vsPage.tempNd = Temperature assessment
+vsPage.input_temp = Temperature
 vsPage.input_temp.placeholder =
 vsPage.input_temp.errorMessage =
-vsPage.tempU =
-vsPage.tempRoute =
-vsPage.oxyNd =
-vsPage.input_oxy =
+vsPage.tempU = Unit temperature
+vsPage.tempRoute = Route temperature
+vsPage.oxyNd = Oxygen saturation assessment
+vsPage.input_oxy = Oxygen saturation
 vsPage.input_oxy.placeholder =
 vsPage.input_oxy.errorMessage =
 
 /*---TE---*/
-tePage.addTeTitle =
-tePage.status =
-tePage.visitNd =
-tePage.visitNd.placeholder =
-tePage.visitDate =
-tePage.target.lesion =
-tePage.non.target.lesion =
-tePage.new.lesion.status =
-tePage.overall.response =
-application.create.te =
+tePage.addTeTitle = Create a form Tumoral evaluation
+tePage.status = Was tumoral evaluation perfomed?
+tePage.visitNd = Please specify the reason why tumoral evaluation is not done
+tePage.visitNd.placeholder = Please specify the reason why tumoral evaluation is not done
+tePage.visitDate = Date of assessment
+tePage.target.lesion = Target lesions
+tePage.non.target.lesion = Non target lesions
+tePage.new.lesion.status = New lesion
+tePage.overall.response = Overall response
+application.create.te = Create a form Tumoral evaluation
