--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -26,15 +26,15 @@ footer.copyright = Sym022©2023 sîte conçu par DEBETANCOURT Daphné et DEVOGELAERE
 /*---Menu---*/
 menu.data.DM = Data Manager
 menu.data.site = Sites
-menu.data.site.add = Ajouter un site
+menu.data.site.add = Créer un site
 menu.data.site.consult = Liste des sites
 menu.data.users = Utilisateurs
-menu.data.users.add = Ajouter un utilisateur
+menu.data.users.add = Créer un utilisateur
 menu.data.users.consult = Liste des utilisateurs
 menu.data.usersSite.add = Attribuer des sites à un utilisateur
 menu.data.usersSite.consult = Liste des utilisateurs et leurs sites
 menu.data.role = Rôles et permissions
-menu.data.role.add = Ajouter un rôle
+menu.data.role.add = Créer un rôle
 menu.data.role.consult = Liste des rôles
 menu.data.rolePermission.add = Attribuer des permissions à un rôle
 menu.data.rolePermission.modify = Liste des rôles et leurs permissions
@@ -60,10 +60,11 @@ role = Le rôle
 listOfPermissionsOf = La liste des permissions
 listOfSites = La liste des sites
 subject =  Le sujet
-dov = La date de visite
-ic = Le consentement
-dm = L'information démographique
-vs = L'information des signes vitaux
+dov = Le formulaire Date de visite
+ic = Le formulaire Consentement éclairé
+dm = Le formulaire Démographie
+vs = Le formulaire des Signes vitaux
+te = Le formulaire Evaluation tumorale 
 add = a bien été créé
 update = a bien été mis à jour
 for = pour le
@@ -76,8 +77,8 @@ sitePage.siteNum.placeHolder = Le numéro de site hospitalier est compris entre 1
 sitePage.siteNum.errorMessage = Le numéro de site hospitalier est compris entre 1 et 999999
 messageErrorSiteNum = Le numéro de site hospitalier entré existe déjà dans la base de données
 sitePage.siteName = Nom du site hospitalier
-sitePage.siteName.placeHolder = Le nom du site hospitalier doit contenir au moins 2 caractères et ne pas contenir de chiffres
-sitePage.siteName.errorMessage = Le nom du site hospitalier doit contenir au moins 2 caractères et ne pas contenir de chiffres
+sitePage.siteName.placeHolder = Le nom du site hospitalier est obligatoire et doit contenir au moins 2 caractères et ne pas contenir de chiffres
+sitePage.siteName.errorMessage = Le nom du site hospitalier est obligatoire et doit contenir au moins 2 caractères et ne pas contenir de chiffres
 sitePage.piName = Nom de l'investigateur
 sitePage.piName.placeHolder = Le nom de l'investigateur doit comprendre au moins 2 caractères et ne pas contenir de chiffres
 sitePage.piName.errorMessage = Le nom de l'investigateur doit comprendre au moins 2 caractères et ne pas contenir de chiffres
@@ -99,15 +100,15 @@ userPage.lastName = Nom
 userPage.lastName.placeHolder = Le nom de famille de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
 userPage.lastName.errorMessage = Le nom de famille de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
 userPage.firstName = Prénom
-userPage.firstName.placeHolder = Le prénom de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
-userPage.firstName.errorMessage = Le prénom de l'utilisateur doit contenir au moins 2 caractères et ne pas contenir de chiffre
+userPage.firstName.placeHolder = Le prénom de l'utilisateur est obligatoire et doit contenir au moins 2 caractères et ne pas contenir de chiffre
+userPage.firstName.errorMessage = Le prénom de l'utilisateur est obligatoire et doit contenir au moins 2 caractères et ne pas contenir de chiffre
 userPage.username = Nom d'utilisateur
-userPage.username.placeHolder = Le nom de l'utilisateur doit contenir au moins 2 caractères
-userPage.username.errorMessage = Le nom de l'utilisateur doit contenir au moins 2 caractères
+userPage.username.placeHolder = Le nom de l'utilisateur est obligatoire et doit contenir au moins 2 caractères
+userPage.username.errorMessage = Le nom de l'utilisateur est obligatoire et doit contenir au moins 2 caractères
 messageErrorUserName = Le nom d'utilisateur entré existe déjà dans la base de données
-userPage.mail = Mail
-userPage.mail.placeHolder = Le mail doit respecter le format suivant XXX@XXX.XXX
-userPage.mail.errorMessage = Le mail doit respecter le format suivant XXX@XXX.XXX
+userPage.mail = Adresse e-mail
+userPage.mail.placeHolder = L'addresse e-mail doit respecter le format suivant XXX@XXX.XXX
+userPage.mail.errorMessage = L'addresse e-mail doit respecter le format suivant XXX@XXX.XXX
 userPage.Password = Mot de passe
 userPage.password.placeholder = Le mot de passe doit contenir au minimum 8 caractères (1 Majuscule, 1 chiffre et un caractère spécial)
 userPage.Password.errorMessage = Le mot de passe doit contenir au minimum 8 caractères (1 Majuscule, 1 chiffre et un caractère spécial)
@@ -121,8 +122,8 @@ userPage.ListOfUsers = Liste des utilisateurs
 rolePage.addRoleTitle = Créer un rôle
 rolePage.addRole = Créer un rôle
 rolePage.roleLabel = Nom du rôle
-rolePage.roleLabel.placeholder = Le nom du rôle ne peut être vide et doit contenir au moins 2 caractères
-rolePage.roleLabel.errorMessage = Le nom du rôle ne peut être vide et doit contenir au moins 2 caractères
+rolePage.roleLabel.placeholder = Le nom du rôle est obligatoire et doit contenir au moins 2 caractères
+rolePage.roleLabel.errorMessage = Le nom du rôle est obligatoire et doit contenir au moins 2 caractères
 messageErrorRoleName = Le nom du rôle entré existe déjà dans la base de données
 application.create.role = Créer un rôle
 rolePage.updateRoleTitle = Mettre à jour un rôle
@@ -134,10 +135,10 @@ rolePage.ListOfRoles = Liste des rôles
 add.rolePermission = Créer la liste des permissions pour un rôle
 select.role = Sélectionner un rôle
 select.permission = Sélectionner la/les permission(s)
-update.rolePermission = Mettre à jour la liste des permissions pour un rôle
+update.rolePermission = Mettre à jour la liste des permissions attribuées un rôle
 
 /*---User Site---*/
-add.userSite = Créer la liste des sites pour un utilisateur
+add.userSite = Assigner une liste de sites à un utilisateur
 select.user = Sélectionner un utilisateur 
 select.userName = Sélection un nom d'utilisateur 
 select.lastName = Sélectionner un nom 
@@ -145,7 +146,7 @@ select.firstName = Sélectionner un prénom
 select.site = Sélectionner un site 
 select.siteNum = Sélectionner un numéro de site hospitalier 
 select.siteName = Sélectionner un nom de site hospitalier 
-update.userSitePage = Mettre à jour la liste des sites pour un utilisateur 
+update.userSitePage = Mettre à jour la liste des sites assignés à un utilisateur 
 
 /*---Subject---*/
 subjectPage.addSubject = Créer un sujet
@@ -160,96 +161,97 @@ sitePage.ListOfSubjects.Consult = Consulter les données du sujet
 /*---Event---*/
 subjectPage.addEvent = Créer un évènement
 visitPage.visit = Visite 
-visitPage.visitLabel = Intitulé de la visite
+visitPage.visitLabel = Nom de la visite
 formPage.form = Formulaire 
-formPage.formLabel = Intitulé du formulaire
+formPage.formLabel = Nom du formulaire
 
 /*---DOV---*/
-dovPage.addDovTitle = Créer une date de visite
-dovPage.status = Réalisé 
-done = Fait
-notDone = Pas fait
-dovPage.visitNd = Raison 
-dovPage.visitNd.placeholder = Doit contenir l'explication que la visite n'a pas été faite
+dovPage.addDovTitle = Créer un formulaire Date de visite
+dovPage.status = La visite de screening a-t'-elle été réalisée?
+done = Réalisé
+notDone = Non réalisé
+dovPage.visitNd = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée 
+dovPage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée
 messageErrorVisitNd = Ce champ ne peut être rempli que si la visite n'a pas été réalisée
 messageErrorVisitNdFalse = Ce champ doit être rempli si la visite n'a pas été réalisée
-messageErrorVisitDateMissing = La date doit être renseignée si la visite a été réalisée
-dovPage.visitDate = Date de la visite 
+messageErrorVisitDateMissing = La date de visite est obligatoire si celle-ci a été réalisée
+dovPage.visitDate = Date de visite 
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
-application.create.dov = Créer une date de visite
+application.create.dov = Créer un formulaire Date de visite
 
 /*---IC---*/
-icPage.addIcTitle = Créer un consentement
-icPage.visitDate = Date du consentement 
+icPage.addIcTitle = Créer un formulaire de Consentement éclairé
+icPage.visitDate = Date du Consentement 
 messageErrorIcDate = La date du consentement ne peut pas être dans le futur
 icPage.protocoleVersion = Version du protocole 
 icPage.protocoleVersion.placeholder = Doit contenir la version du protocole
-icPage.protocoleVersion.errorMessage = Ce champ ne peut pas être vide
+icPage.protocoleVersion.errorMessage = Ce champ est obligatoire
 icPage.status = Éligibilité du sujet 
 eligible = Éligible
 notEligible = Pas éligible
-messageErrorIeNotMeet = Il n'est pas possible d'être éligible avec un critère d'exclusion
-messageErrorIeNotMeetNa = Il n'est pas possible d'être non éligible avec ce critère
-icPage.ie_not_met = Critère 
+messageErrorIeNotMeet = Le sujet est rapporté comme éligible mais un critère non respecté a été selectionné
+messageErrorIeNotMeetNa = Le sujet est rapport comme non éligible mais un critère n'a pas été sélectionné
+icPage.ie_not_met = Critère non respecté
 
 /*---DM---*/
-dmPage.addDmTitle = Créer une information démographique
+dmPage.addDmTitle = Créer un formulaire Demographie
 dmPage.year = Année de naissance 
 dmPage.year.placeholder = Doit être 1920 et 2005
-dmPage.year.errorMessage = L'année de naissance doit entre 1920 et 2005
+dmPage.year.errorMessage = L'année de naissance doit être entre 1920 et 2005
 dmPage.sex = Sexe 
-dmPage.ethnicity = Ethnicité 
-dmPage.culture = Culture 
+dmPage.ethnicity = Origine Ethnique
+dmPage.culture = Identité Culturelle
 
 /*---VS---*/
-vsPage.addVsTitle =
-vsPage.status =
-vsPage.vsNd =
-vsPage.vsNd.placeholder =
-vsPage.heightNd =
-vsPage.height =
+vsPage.addVsTitle = Créer un formulaire Signes vitaux
+vsPage.status = Les signes vitaux ont-ils été collectés?
+vsPage.vsNd = Veuillez spécifier la  raison pour laquelle les signes vitaux n'ont pas été collectés
+vsPage.vsNd.placeholder = Veuillez spécifier la  raison pour laquelle les signes vitaux n'ont pas été collectés
+vsPage.vsDate = Date de l'évaluation
+vsPage.heightNd = Mesure de la taille
+vsPage.height = Taille
 vsPage.height.placeholder =
 vsPage.height.errorMessage =
-vsPage.weightNd =
-vsPage.height.unit =
-vsPage.weight =
+vsPage.height.unit = Unité de taille
+vsPage.weightNd = Mesure du poids
+vsPage.weight = Poids
 vsPage.weight.placeholder =
 vsPage.weight.errorMessage =
-vsPage.weight.unit =
-vsPage.bpNd =
-vsPage.input_sbp =
+vsPage.weight.unit = Unité de poids
+vsPage.bpNd = Mesure de la pression sanguine
+vsPage.input_sbp = Pression sanguine systolique
 vsPage.input_sbp.placeholder =
 vsPage.input_sbp.errorMessage =
-vsPage.input_dbp =
+vsPage.input_dbp = Pression sanguine diastolique
 vsPage.input_dbp.placeholder =
 vsPage.input_dbp.errorMessage =
-vsPage.hrNd =
-vsPage.input_hr =
+vsPage.hrNd = Mesure de la fréquence cardiaque
+vsPage.input_hr = Fréquence cardiaque
 vsPage.input_hr.placeholder =
 vsPage.input_hr.errorMessage =
-vsPage.rrNd =
-vsPage.input_rr =
+vsPage.rrNd = Mesure de la fréquence respiratoire
+vsPage.input_rr = Fréquence respiratoire
 vsPage.input_rr.placeholder =
 vsPage.input_rr.errorMessage =
-vsPage.tempNd =
-vsPage.input_temp =
+vsPage.tempNd = Mesure de la température
+vsPage.input_temp = Température
 vsPage.input_temp.placeholder =
 vsPage.input_temp.errorMessage =
-vsPage.tempU =
-vsPage.tempRoute =
-vsPage.oxyNd =
-vsPage.input_oxy =
+vsPage.tempU = Unité de température
+vsPage.tempRoute = Voie de mesure de la température
+vsPage.oxyNd = Mesure de la saturation en oxygène
+vsPage.input_oxy = Saturation en oxygène
 vsPage.input_oxy.placeholder =
 vsPage.input_oxy.errorMessage =
 
 /*---TE---*/
-tePage.addTeTitle =
-tePage.status =
-tePage.visitNd =
-tePage.visitNd.placeholder =
-tePage.visitDate =
-tePage.target.lesion =
-tePage.non.target.lesion =
-tePage.new.lesion.status =
-tePage.overall.response =
-application.create.te =
+tePage.addTeTitle = Créer un formulaire d'Evaluation tumorale
+tePage.status = L'évaluation tumorale a-t'-elle été réalisée?
+tePage.visitNd = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
+tePage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
+tePage.visitDate = Date de l'évaluation
+tePage.target.lesion = Lésions cibles
+tePage.non.target.lesion = Lésions no cibles
+tePage.new.lesion.status = Nouvelle lésion
+tePage.overall.response = Réponse globale
+application.create.te = Créer un formulaire d'Evaluation tumorale
