MAJ 29/08 VS dynamique

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -243,6 +243,18 @@ vsPage.oxyNd = Oxygen saturation assessment
 vsPage.input_oxy = Oxygen saturation
 vsPage.input_oxy.placeholder =
 vsPage.input_oxy.errorMessage =
+messageErrorHeightCm =
+messageErrorHeightInches =
+messageErrorWeightKg =
+messageErrorWeightPounds =
+messageErrorSbpGtDbp =
+messageErrorSbp =
+messageErrorDbp =
+messageErrorHr =
+messageErrorRr =
+messageErrorTempC =
+messageErrorTempF =
+messageErrorOxy =
 
 /*---TE---*/
 tePage.addTeTitle = Create a form Tumoral evaluation
