--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -243,6 +243,18 @@ vsPage.oxyNd = Mesure de la saturation en oxygène
 vsPage.input_oxy = Saturation en oxygène
 vsPage.input_oxy.placeholder =
 vsPage.input_oxy.errorMessage =
+messageErrorHeightCm =
+messageErrorHeightInches =
+messageErrorWeightKg =
+messageErrorWeightPounds =
+messageErrorSbpGtDbp =
+messageErrorSbp =
+messageErrorDbp =
+messageErrorHr =
+messageErrorRr =
+messageErrorTempC =
+messageErrorTempF =
+messageErrorOxy =
 
 /*---TE---*/
 tePage.addTeTitle = Créer un formulaire d'Evaluation tumorale
