Cm with partial I18N

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -60,6 +60,8 @@ role = The role
 listOfPermissionsOf = The list of permissions
 listOfSites = The list of sites
 subject =  The subject
+ae = The form Adverse event
+cm = The form Concomitant medication
 dov = The form Date of visit
 ic= The form Informed consent
 dm = The form Demography
@@ -122,8 +124,8 @@ userPage.ListOfUsers = List of users
 rolePage.addRoleTitle = Create a role
 rolePage.addRole = Create a role
 rolePage.roleLabel = Role name
-rolePage.roleLabel.placeholder = the role name is mandatory and must be at least 2 characters long
-rolePage.roleLabel.errorMessage = the role name is mandatory and must be at least 2 characters long
+rolePage.roleLabel.placeholder = The role name is mandatory and must be at least 2 characters long
+rolePage.roleLabel.errorMessage = The role name is mandatory and must be at least 2 characters long
 messageErrorRoleName = The role name entered already exists in the database
 application.create.role = Create a role
 rolePage.updateRoleTitle = Update a role
@@ -161,9 +163,9 @@ sitePage.ListOfSubjects.Consult = Consult subject data
 /*---Event---*/
 subjectPage.addEvent = Create an event
 visitPage.visit = Visit 
-visitPage.visitLabel = Visit name
+visitPage.visitLabel = Visit name 
 formPage.form = Form 
-formPage.formLabel = Form name
+formPage.formLabel = Form name 
 
 /*---DOV---*/
 dovPage.addDovTitle = Create a form Date of visit
@@ -210,39 +212,39 @@ vsPage.vsNd.placeholder = Please specify the reason why vital signs were not col
 vsPage.vsDate = Date of assessment
 vsPage.heightNd = Height assessment
 vsPage.height = Height
-vsPage.height.placeholder =
-vsPage.height.errorMessage =
+vsPage.height.placeholder = Please specify Height value
+vsPage.height.errorMessage = Please specify Height or report this assessment as not done
 vsPage.height.unit = Height unit
 vsPage.weightNd = Weight assessment
 vsPage.weight = Weight
-vsPage.weight.placeholder =
-vsPage.weight.errorMessage =
+vsPage.weight.placeholder = Please specify Weight value
+vsPage.weight.errorMessage = Please specify Weight or report this assessment as not done
 vsPage.weight.unit = Weight unit
 vsPage.bpNd = Blood pressure assessment 
 vsPage.input_sbp = Systolic blood pressure
-vsPage.input_sbp.placeholder =
-vsPage.input_sbp.errorMessage =
+vsPage.input_sbp.placeholder = Please specify Systolic blood pressure value
+vsPage.input_sbp.errorMessage = Please specify Systolic blood pressure or report this assessment as not done
 vsPage.input_dbp = Diastolic blood pressure
-vsPage.input_dbp.placeholder =
-vsPage.input_dbp.errorMessage =
+vsPage.input_dbp.placeholder = Please specify Diastolic blood pressure value
+vsPage.input_dbp.errorMessage = Please specify Diastolic blood pressure or report this assessment as not done
 vsPage.hrNd = Heart rate assessment
 vsPage.input_hr = Heart rate
-vsPage.input_hr.placeholder =
-vsPage.input_hr.errorMessage =
+vsPage.input_hr.placeholder = Please specify Heart rate value
+vsPage.input_hr.errorMessage = Please specify Heart rate or report this assessment as not done
 vsPage.rrNd = Respiratory rate assessment
 vsPage.input_rr = Respiratory rate
-vsPage.input_rr.placeholder =
-vsPage.input_rr.errorMessage =
+vsPage.input_rr.placeholder = Please specify Respiratory rate value
+vsPage.input_rr.errorMessage = Please specify Respiratory rate or report this assessment as not done
 vsPage.tempNd = Temperature assessment
 vsPage.input_temp = Temperature
-vsPage.input_temp.placeholder =
-vsPage.input_temp.errorMessage =
+vsPage.input_temp.placeholder = Please specify Temperature value
+vsPage.input_temp.errorMessage = Please specify Temperature or report this assessment as not done
 vsPage.tempU = Unit temperature
 vsPage.tempRoute = Route temperature
 vsPage.oxyNd = Oxygen saturation assessment
 vsPage.input_oxy = Oxygen saturation
-vsPage.input_oxy.placeholder =
-vsPage.input_oxy.errorMessage =
+vsPage.input_oxy.placeholder = Please specify Oxygen saturation value
+vsPage.input_oxy.errorMessage = Please specify Oxygen saturation or report this assessment as not done
 messageErrorHeightCm =
 messageErrorHeightInches =
 messageErrorWeightKg =
@@ -267,3 +269,54 @@ tePage.non.target.lesion = Non target lesions
 tePage.new.lesion.status = New lesion
 tePage.overall.response = Overall response
 application.create.te = Create a form Tumoral evaluation
+
+/*--AE--*/
+aePage.addAeTitle = Create a form Adverse event
+aePage.aeterm = AE description
+aePage.aeterm.placeHolder = Please specify the AE description
+aePage.aeterm.errorMessage = AE description is mandatory
+aePage.aetermc = AE preferred term
+aePage.aetermc.placeHolder = Please specify the AE preferred term
+aePage.aestdat = Start date
+aePage.aeout = Outcome
+aePage.aeendat = End date
+aePage.aetoxgd = Toxicity grade
+aePage.aesev = Severity
+aePage.aerel = Relationship to study treatment
+aePage.aeacn = Action taken with study treatment
+aePage.aecm = Was a concomitant or additional treatment given due to this adverse event?
+aePage.aeproc = Was a procedure / non drug  therapy given due to this adverse event?
+aePage.aeother = Was other action taken due to this adverse event?
+aePage.aeothersp = Other action taken, specify
+aePage.aeothersp.placeHolder = Please specify
+aePage.aeothersp.errorMessage = Please specify the Other action taken or correct the previous answer 
+aePage.aeser = Is this a serious Adverse event?
+yes = Yes
+no = No
+aePage.aedeath = Death 
+aePage.aelife = Life-threatening
+aePage.aehosp = Hospitalisation or prolongation of hospitalisation
+aePage.aedisab = Persistent or significant disability / incapacity
+aePage.aecong = Congenital anomaly or birth defect
+aePage.aemedim = Important medical event
+aePage.aemedimsp = Important medical event, specify
+aePage.aemedimsp.placeHolder = Please specify
+aePage.aemedimsp.errorMessage = Please specify the reason why this is an Important medical event or correct the previous answer
+
+/*--CM--*/
+cmPage.addCmTitle = Create a form Concomitant medication
+cmPage.cmterm = Medication name
+cmPage.cmterm.placeHolder = Please specify Medication name
+cmPage.cmterm.errorMessage = Medication name is mandatory
+cmPage.cmtermc = CM preferred term
+cmPage.cmtermc.placeHolder = Please specify the CM preferred term
+cmPage.cmstdat = Start date
+cmPage.cmong = Ongoing
+cmPage.cmendat = End date
+cmPage.cmindic = Reason for CM
+cmPage.cmindicsp = If Other reason, specify
+cmPage.cmindicsp.placeHolder = Please specify
+cmPage.cmindicsp.errorMessage =  Please specify the Other reason or correct the previous answer
+cmPage.input_cmdose = Dose
+cmPage.input_cmdose.placeholder = Please specify the Dose
+cmPage.input_cmdose.errorMessage = Dose is mandatory
