--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -60,6 +60,8 @@ role = Le rôle
 listOfPermissionsOf = La liste des permissions
 listOfSites = La liste des sites
 subject =  Le sujet
+ae = Le formulaire Evènement indésirable
+cm = Le formulaire traitement concomitant
 dov = Le formulaire Date de visite
 ic = Le formulaire Consentement éclairé
 dm = Le formulaire Démographie
@@ -263,7 +265,40 @@ tePage.visitNd = Veuillez spécifier la  raison pour laquelle l'évaluation tumora
 tePage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
 tePage.visitDate = Date de l'évaluation
 tePage.target.lesion = Lésions cibles
-tePage.non.target.lesion = Lésions no cibles
+tePage.non.target.lesion = Lésions non cibles
 tePage.new.lesion.status = Nouvelle lésion
 tePage.overall.response = Réponse globale
 application.create.te = Créer un formulaire d'Evaluation tumorale
+
+/*--AE--*/
+aePage.addAeTitle = Créer un formulaire d'Evènement indésirable
+aePage.aeterm = Description de l'EI
+aePage.aeterm.placeHolder = Veuillez specifier la description de l'EI
+aePage.aeterm.errorMessage = La description de l'EI est obligatoire
+aePage.aetermc = Terme préféré EI
+aePage.aetermc.placeHolder = Veuillez specifier le Terme préféré EI
+aePage.aestdat = Date de début
+aePage.aeout = Issue de l'évènement
+aePage.aeendat = Date de fin
+aePage.aetoxgd = Toxicité
+aePage.aesev = Severité
+aePage.aerel = Relation avec le traitement de l'étude
+aePage.aeacn = Action prise avec le traitement de l'étude
+aePage.aecm = Est-ce qu?un traitement additionnel a été donné suite à cette évènement indésirable
+aePage.aeproc = Est-ce qu?une procédure / traitement non médicamenteux à été donné suite à cette évènement indésirable
+aePage.aeother = Action autre prise suite à cette évènement indésirable
+aePage.aeothersp = Action autre prise, specifier
+aePage.aeothersp.placeHolder = Veuillez spécifier
+aePage.aeothersp.errorMessage = Veuillez spécifier l'action autre ou corriger votre réponse précédente
+aePage.aeser = Est-ce que l?évènement indésirable est considéré comme sérieux ?
+yes = Oui
+no = Non
+aePage.aedeath = A entraîné la mort
+aePage.aelife = A engagé le pronostic vital
+aePage.aehosp = A entraîné l?hospitalisation ou la prolongation d?une l?hospitalisation existante
+aePage.aedisab = A résulté une invalidité / incapacité persistante ou significative
+aePage.aecong = A entraîné une anomalie congénitale
+aePage.aemedim = Est considéré par le médecin investigateur comme étant médicalement important
+aePage.aemedimsp = Medicalement important, spécifier
+aePage.aemedimsp.placeHolder = Veuillez spécifier
+aePage.aemedimsp.errorMessage = Veuillez spécifier la raison pour laquelle l'évènement est medicalement important ou corriger la réponse précédente
