MAJ 04/09 update DOV OK et list of events OK

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -302,6 +302,11 @@ aePage.aemedim = Important medical event
 aePage.aemedimsp = Important medical event, specify
 aePage.aemedimsp.placeHolder = Please specify
 aePage.aemedimsp.errorMessage = Please specify the reason why this is an Important medical event or correct the previous answer
+messageErrorAeendatBeforAestdat =
+messageErrorAeendatPres =
+messageErrorAeendatMis =
+messageErrorAeotherspMis =
+
 
 /*--CM--*/
 cmPage.addCmTitle = Create a form Concomitant medication
